metadata/force-app/main/default/objects/newTestObj__c/newTestObj__c.object-meta.xml
<CustomObject>
    <label>newTestObj</label>
    <nameField>
        <label>newTestObj Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>newTestObjs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>