metadata/force-app/main/default/objects/newTestObj__c/fields/Form1__c.field-meta.xml
<CustomField>
    <fullName>Form1__c</fullName>
    <formula>testfieldchecklist__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Form1</label>
    <type>Checkbox</type>
</CustomField>