metadata/force-app/main/default/objects/newTestObj__c/fields/testfieldchecklist__c.field-meta.xml
<CustomField>
    <fullName>testfieldchecklist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>testfieldchecklist</label>
    <type>Checkbox</type>
</CustomField>