metadata/force-app/main/default/objects/newTestObj__c/fields/testfieldpicklist__c.field-meta.xml
<CustomField>
    <fullName>testfieldpicklist__c</fullName>
    <label>testfieldpicklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1,2,3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>